--- a/auth/package.json
+++ b/auth/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.3",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.9.2",
     "mongoose": "^5.11.13",
     "ts-node-dev": "^1.1.1",
