--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -11,14 +11,14 @@ spec:
     metadata:
       labels:
         app: client
-    spec: 
+    spec:
       containers:
         - name: client
-          image: namiranda/client
+          image: stephengrider/client
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: client-srv
 spec:
   selector:
