--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,7 +8,7 @@ build:
   local:
     push: false
   artifacts:
-    - image: namiranda/auth
+    - image: stephengrider/auth
       context: auth
       docker:
         dockerfile: Dockerfile
@@ -16,7 +16,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: namiranda/client
+    - image: stephengrider/client
       context: client
       docker:
         dockerfile: Dockerfile
